prepare for LD CE 8.7.3
prepare for LD CE 8.7.3